Добавляет стилизацию футера

--- a/source/index.html
+++ b/source/index.html
@@ -257,7 +257,6 @@
           <p>ЗАО «НCП «МонтCтрой»</p>
         </div>
         <ul class="footer__menu">
-          <li><a href="#" >Главная</a></li>
           <li><a href="#" >Услуги</a></li>
           <li><a href="#" >Проекты</a></li>
           <li><a href="#" >Партнеры</a></li>
@@ -268,26 +267,26 @@
           <ul class="social__list">
             <li class="social__item">
               <a href="#" class="social__link social__link--vk">
-                <svg width="35"><use xlink:href="img/sprite_auto.svg#icon-vk"></use></svg>
+                <svg width="35" height="20"><use xlink:href="img/sprite_auto.svg#icon-vk"></use></svg>
               </a>
               <span class="visually-hidden">ВКонтакте</span>
             </li>
             <li class="social__item social__item--tw">
               <a href="#" class="social__link social__link--tw">
-                <svg width="27"><use xlink:href="img/sprite_auto.svg#icon-tw"></use></svg>
+                <svg width="27" height="18"><use xlink:href="img/sprite_auto.svg#icon-tw"></use></svg>
               </a>
               <span class="visually-hidden">Твиттер</span>
             </li>
             <li class="social__item social__item--fb">
               <a href="#" class="social__link social__link--fb">
-                <svg width="12"><use xlink:href="img/sprite_auto.svg#icon-fb"></use></svg>
+                <svg width="12" height="26"><use xlink:href="img/sprite_auto.svg#icon-fb"></use></svg>
               </a>
               <span class="visually-hidden">Фейсбук</span>
             </li>
           </ul>
         </section>
       </div>
-      <p class="footer__copyright">1992-2018 ©  ЗАО&nbsp;“НСП ”МонтСтрой”. Все права защищены</p>
+      <p class="footer__copyright"><span>1992-2018 ©  ЗАО&nbsp;“НСП ”МонтСтрой”. Все права защищены</span></p>
     </div>
   </footer>
   <script src="https://unpkg.com/swiper/js/swiper.js"></script>
